Release RTRendererAPI 0.3.0 with Java 21 support